--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
+asn1crypto==0.24.0
 certifi==2018.8.13
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.3
+cryptography-vectors==2.3
 Django==2.1
+idna==2.7
+pycparser==2.18
+pyOpenSSL==18.0.0
+PySocks==1.6.8
 pytz==2018.5
+requests==2.19.1
+six==1.11.0
+urllib3==1.23
