--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ cffi==1.11.5
 chardet==3.0.4
 cryptography==2.3
 cryptography-vectors==2.3
+delegator.py==0.1.0
 Django==2.1
 idna==2.7
+pexpect==4.6.0
+ptyprocess==0.6.0
 pycparser==2.18
 pyOpenSSL==18.0.0
 PySocks==1.6.8
