--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 - conda install --yes --file requirements.txt
 - python manage.py migrate
 script:
-- python manage.py runserver &
+- gunicorn workserver.wsgi --bind=0.0.0.0:8000 --workers=3 &
 - python manage.py test
 after_success:
 - echo $TRAVIS_SECURE_ENV_VARS
